syntax = "proto3";

package restaurant.events;
option java_multiple_files = true;

message RestaurantEvent {
  string restaurantId = 1;
  string name = 2;
  string email = 3;
  string event_type = 4;
}